--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,67 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer base {
+    :root {
+        --background: 220 23.076923191547394% 94.90196108818054%;
+        --foreground: 234 16.022099554538727% 35.49019694328308%;
+        --muted: 223 15.909090638160706% 82.74509906768799%;
+        --muted-foreground: 233 12.796208262443542% 41.372549533843994%;
+        --popover: 220 23.076923191547394% 94.90196108818054%;
+        --popover-foreground: 234 16.022099554538727% 35.49019694328308%;
+        --card: 220 23.076923191547394% 94.90196108818054%;
+        --card-foreground: 234 16.022099554538727% 35.49019694328308%;
+        --border: 225 13.55932205915451% 76.86274647712708%;
+        --input: 225 13.55932205915451% 76.86274647712708%;
+        --primary: 220 91.4893627166748% 53.921568393707275%;
+        --primary-foreground: 220 23.076923191547394% 94.90196108818054%;
+        --secondary: 223 15.909090638160706% 82.74509906768799%;
+        --secondary-foreground: 234 16.022099554538727% 35.49019694328308%;
+        --accent: 223 15.909090638160706% 82.74509906768799%;
+        --accent-foreground: 234 16.022099554538727% 35.49019694328308%;
+        --destructive: 347 86.66666746139526% 44.11764740943909%;
+        --destructive-foreground: 220 21.95121943950653% 91.96078181266785%;
+        --ring: 234 16.022099554538727% 35.49019694328308%;
+        --radius: 0.5rem;
+        --chart-1: 347 86.66666746139526% 44.11764740943909%;
+        --chart-2: 183 73.86363744735718% 34.50980484485626%;
+        --chart-3: 220 91.4893627166748% 53.921568393707275%;
+        --chart-4: 35 76.98412537574768% 49.41176474094391%;
+        --chart-5: 109 57.63546824455261% 39.803922176361084%;
+    }
+
+    .dark {
+        --background: 240 21% 15%;
+        --foreground: 226 64% 88%;
+        --card: 240 21% 12%;
+        --card-foreground: 0 0% 98%;
+        --popover: 240 21% 12%;
+        --popover-foreground: 0 0% 98%;
+        --primary: 217 92% 76%;
+        --primary-foreground: 240 21% 15%;
+        --secondary: 234 13% 31%;
+        --secondary-foreground: 226 64% 88%;
+        --muted: 237 16% 23%;
+        --muted-foreground: 231 11% 47%;
+        --accent: 240 4% 16%;
+        --accent-foreground: 0 0% 98%;
+        --destructive: 343 81% 75%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 234 13% 31%;
+        --input: 234 13% 31%;
+        --ring: 226 64% 88%;
+    }
+}
+
+@layer base {
+    * {
+        @apply border-border;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
