feat: courses page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ body {
         --background: 220 23.076923191547394% 94.90196108818054%;
         --foreground: 234 16.022099554538727% 35.49019694328308%;
         --muted: 223 15.909090638160706% 82.74509906768799%;
-        --muted-foreground: 233 12.796208262443542% 41.372549533843994%;
+        --muted-foreground: 231 11% 47%;
         --popover: 220 23.076923191547394% 94.90196108818054%;
         --popover-foreground: 234 16.022099554538727% 35.49019694328308%;
         --card: 220 23.076923191547394% 94.90196108818054%;
@@ -22,7 +22,7 @@ body {
         --primary-foreground: 220 23.076923191547394% 94.90196108818054%;
         --secondary: 223 15.909090638160706% 82.74509906768799%;
         --secondary-foreground: 234 16.022099554538727% 35.49019694328308%;
-        --accent: 223 15.909090638160706% 82.74509906768799%;
+        --accent: 223 15.909090638160706% 90%;
         --accent-foreground: 234 16.022099554538727% 35.49019694328308%;
         --destructive: 347 86.66666746139526% 44.11764740943909%;
         --destructive-foreground: 220 21.95121943950653% 91.96078181266785%;
@@ -47,7 +47,7 @@ body {
         --secondary: 234 13% 31%;
         --secondary-foreground: 226 64% 88%;
         --muted: 237 16% 23%;
-        --muted-foreground: 231 11% 47%;
+        --muted-foreground: 228, 24%, 72%;
         --accent: 237, 16%, 23%;
         --accent-foreground: 0 0% 98%;
         --destructive: 343 81% 75%;
