--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,15 +11,15 @@ body {
         --background: 220 23.076923191547394% 94.90196108818054%;
         --foreground: 234 16.022099554538727% 35.49019694328308%;
         --muted: 223 15.909090638160706% 82.74509906768799%;
-        --muted-foreground: 231 11% 47%;
+        --muted-foreground: 233, 10%, 47%;
         --popover: 220 23.076923191547394% 94.90196108818054%;
         --popover-foreground: 234 16.022099554538727% 35.49019694328308%;
         --card: 220 23.076923191547394% 94.90196108818054%;
         --card-foreground: 234 16.022099554538727% 35.49019694328308%;
         --border: 225 13.55932205915451% 76.86274647712708%;
         --input: 225 13.55932205915451% 76.86274647712708%;
-        --primary: 220 91.4893627166748% 53.921568393707275%;
-        --primary-foreground: 220 23.076923191547394% 94.90196108818054%;
+        --primary: 217 92% 76%;
+        --primary-foreground: 240 21% 15%;
         --secondary: 223 15.909090638160706% 82.74509906768799%;
         --secondary-foreground: 234 16.022099554538727% 35.49019694328308%;
         --accent: 223 15.909090638160706% 90%;
@@ -62,6 +62,7 @@ body {
     * {
         @apply border-border;
     }
+
     body {
         @apply bg-background text-foreground;
     }
