--- a/src/components/scroller/scrollerStyle.css
+++ b/src/components/scroller/scrollerStyle.css
@@ -10,6 +10,14 @@
             transparent);
 }
 
+.scroller[data-direction="reverse"] {
+  --_animation-direction: reverse;
+}
+
+.scroller[data-direction="forwards"] {
+  --_animation-direction: forwards;
+}
+
 .inner-scroller {
     padding-block: 1rem;
     display: flex;
@@ -17,7 +25,7 @@
     gap: 1rem;
     width: max-content;
     flex-wrap: nowrap;
-    animation: scroll 20s forwards linear infinite;
+    animation: scroll 80s var(--_animation-direction, forwards) linear infinite;
 }
 
 @keyframes scroll {
